force-app/main/default/objects/MUSW__Permit2__c/fields/Business_Email__c.field-meta.xml
<CustomField>
<fullName>Business_Email__c</fullName>
<label>Business Email</label>
<required>true</required>
<type>Email</type>
</CustomField>