force-app/main/default/objects/MUSW__Permit2__c/fields/Insurance_Expiration_Date__c.field-meta.xml
<CustomField>
<fullName>Insurance_Expiration_Date__c</fullName>
<label>Insurance Expiration Date</label>
<required>true</required>
<type>Date</type>
</CustomField>