force-app/main/default/objects/MUSW__Permit2__c/fields/Registrant_Phone_Number__c.field-meta.xml
<CustomField>
<fullName>Registrant_Phone_Number__c</fullName>
<label>Registrant Phone Number</label>
<required>true</required>
<type>Phone</type>
</CustomField>