force-app/main/default/objects/MUSW__Permit2__c/fields/State_License_Number__c.field-meta.xml
<CustomField>
<fullName>State_License_Number__c</fullName>
<label>State License Number</label>
<required>true</required>
<type>Number</type>
<precision>18</precision>
<scale>0</scale>
</CustomField>